--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-requests>=2.0.0
-pandas>=1.0.0
+streamlit>=1.0.0
+pandas>=1.3.0
+numpy>=1.21.0
+plotly>=5.0.0
+matplotlib>=3.4.0
+wordcloud>=1.8.1
+requests>=2.25.0
 python-dotenv>=0.19.0
+pillow>=8.0.0
